added fcc23 output

--- a/get_fcc123_rvl.ipynb
+++ b/get_fcc123_rvl.ipynb
@@ -3,10 +3,20 @@
   {
    "cell_type": "markdown",
    "id": "5f85f298-3760-4991-bb94-2a142f761a89",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "Input: Hansen forest change  \n",
+    "https://github.com/Revalue-Nature/notebooks-early-assessment/blob/main/Global_Hansen_ForestChange_2023_v5.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2fbb935-375d-4aa6-bf0d-16574653a5cd",
    "metadata": {},
    "source": [
-    "Input: Hansen forest change script  \n",
-    "https://github.com/Revalue-Nature/notebooks-early-assessment/blob/main/Global_Hansen_ForestChange_v4.ipynb"
+    "### Import library"
    ]
   },
   {
@@ -65,30 +75,29 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2d3cde09-c932-48f0-9a35-6fbed5d02b7f",
+   "id": "e7aa38c3-f5b5-40b2-85c7-c28f1b2663bf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-05-31 19:43:14.934 Python[9770:715543] +[CATransaction synchronize] called within transaction\n",
-      "2023-05-31 19:43:14.951 Python[9770:715543] +[CATransaction synchronize] called within transaction\n",
-      "2023-05-31 19:43:17.273 Python[9770:715543] +[CATransaction synchronize] called within transaction\n",
-      "2023-05-31 19:43:37.440 Python[9770:715543] +[CATransaction synchronize] called within transaction\n",
-      "2023-05-31 19:43:50.122 Python[9770:715543] +[CATransaction synchronize] called within transaction\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "root = Tk() # pointing root to Tk() to use it as Tk() in program.\n",
     "root.withdraw() # Hides small tkinter window.\n",
     "root.attributes('-topmost', True) # Opened windows will be active. above all windows despite of selection.\n",
     "jrd_directory = filedialog.askopenfile(title=\"Open Jurisdiction Shapefile\") # Returns opened path as st\n",
     "# Raster folder\n",
-    "raster_directory = filedialog.askdirectory(title = \"Specify Raster Folder Directory\")\n",
-    "# Output folder\n",
-    "output_directory = filedialog.askdirectory(title = \"Specify Output Folder\")"
+    "raster_directory = filedialog.askdirectory(title = \"Specify Raster Folder Directory\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3f149d4-53f2-4fce-9188-7d852886310e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Output folder\n",
+    "# output_directory = os.path.expanduser('./riskmapjnr/output')\n",
+    "# if not os.path.exists(output_directory):\n",
+    "#     os.makedirs(output_directory)"
    ]
   },
   {
@@ -99,7 +108,7 @@
    "outputs": [],
    "source": [
     "# output directory\n",
-    "out_dir = os.path.expanduser(output_directory+'/data')\n",
+    "out_dir = os.path.expanduser('./riskmapjnr/data')\n",
     "if not os.path.exists(out_dir):\n",
     "    os.makedirs(out_dir)"
    ]
@@ -113,8 +122,6 @@
    "source": [
     "# Jurisdiction\n",
     "jrd = gpd.read_file(jrd_directory.name)\n",
-    "\n",
-    "# Reproject Shapefile to UTM\n",
     "jrd_proj  = jrd.to_crs(crs=projection)"
    ]
   },
@@ -160,12 +167,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "726c68fe-1b37-4116-b578-47d1ed8ff9bf",
+   "metadata": {},
+   "source": [
+    "### FCC output"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 35,
    "id": "f67ec064-bef9-4cf3-8c8d-57ed2a31305c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get fcc123\n",
+    "\n",
     "# Reclassify raster pixel value\n",
     "# 116-118 = 1\n",
     "# 119-121 = 2\n",
@@ -183,7 +200,36 @@
     "    array[array == 100] = 3\n",
     "    # and so on ...  \n",
     "\n",
-    "with rasterio.open(os.path.join(out_dir, jurisdictionname + '_fcc123.tif').replace(os.sep, '/'), 'w', **profile) as dst:\n",
+    "with rasterio.open(os.path.join(out_dir, jurisdictionname + '_fcc123_' + str(t1+1) + '_' + str(t2) + '.tif').replace(os.sep, '/'), 'w', **profile) as dst:\n",
+    "    # Write to disk\n",
+    "    dst.write(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f9c8707a-9163-41ef-baff-65e2f7eff422",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get fcc23\n",
+    "\n",
+    "# Reclassify raster pixel value\n",
+    "# 116-121 = 0\n",
+    "# 100 = 1\n",
+    "\n",
+    "with rasterio.open(fcc_path) as src:    \n",
+    "    # Read as numpy array\n",
+    "    array = src.read()\n",
+    "    profile = src.profile\n",
+    "    profile.update(compress='lzw')\n",
+    "\n",
+    "    # Reclassify\n",
+    "    array[((t1 - 2000 +100) < array) & (array <= (t2 - 2000 +100))] = 0 # loss t1 to t2\n",
+    "    array[array == 100] = 3 # forest remnant at the end of t2\n",
+    "    # and so on ...  \n",
+    "\n",
+    "with rasterio.open(os.path.join(out_dir, jurisdictionname + '_fcc23_' + str(t1+1) + '_' + str(t2) + '.tif').replace(os.sep, '/'), 'w', **profile) as dst:\n",
     "    # Write to disk\n",
     "    dst.write(array)"
    ]
